--- a/app/views/letters/_form.html.erb
+++ b/app/views/letters/_form.html.erb
@@ -17,10 +17,12 @@
                   <path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clip-rule="evenodd"></path>
                 </svg>
               </div>
-              <input type="text" name="email" id="topbar-search" class="rounded-xl border border-gray-300 text-gray-900 sm:text-sm focus:ring-cyan-600 focus:border-cyan-600 block w-full pl-10 p-2.5" placeholder="搜尋郵件">
+              <input type="text" name="email" id="topbar-search" class="rounded-xl border border-gray-300 text-gray-900 sm:text-sm focus:ring-cyan-600 focus:border-cyan-600 block w-full pl-10 p-2.5" placeholder="<%=t :search_mails, :locale => "en" %>">
             </div>
           </form>
         </div>
+        <li><%= link_to 'English', "http://localhost:3000/en/letters" %></li>
+        <li><%= link_to '中文', "http://localhost:3000/zh-TW/letters" %></li>
         <div class="flex items-center ">
           <button id="toggleSidebarMobileSearch" type="button" class="lg:hidden text-gray-500 hover:text-gray-900 hover:bg-gray-100 p-2 rounded-lg ">
             <span class="sr-only">Search</span>
@@ -51,7 +53,7 @@
           <ul class="space-y-2 pb-2">
             <li class="px-5 m-2">
               <div class="flex flex-row items-center h-8 justify-center my-6">
-                <%= link_to "+ 撰寫", new_letter_path, class: "text-center w-full bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 border-b-4 border-green-600 hover:border-blue rounded-lg shadow-lg" %> 
+                <%= link_to "#{t("compose")}", new_letter_path, class: "text-center w-full bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 border-b-4 border-green-600 hover:border-blue rounded-lg shadow-lg" %> 
               </div>
             </li> 
             <li>
@@ -61,7 +63,7 @@
                   <path d="M8.707 7.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l2-2a1 1 0 00-1.414-1.414L11 7.586V3a1 1 0 10-2 0v4.586l-.293-.293z"></path>
                   <path d="M3 5a2 2 0 012-2h1a1 1 0 010 2H5v7h2l1 2h4l1-2h2V5h-1a1 1 0 110-2h1a2 2 0 012 2v10a2 2 0 01-2 2H5a2 2 0 01-2-2V5z"></path>
                 </svg>
-                <span class="ml-3 flex-1 whitespace-nowrap">收件夾</span>
+                <span class="ml-3 flex-1 whitespace-nowrap"><%= "#{t("inbox")}" %></span>
                 <span class="bg-red-200 text-red-800 ml-3 text-sm font-medium inline-flex items-center justify-center px-2 rounded-full">123</span>
               </div>
               <% end %>
@@ -71,7 +73,7 @@
                 <svg class="w-6 h-6 text-gray-500 flex-shrink-0 group-hover:text-gray-900 transition duration-75" viewBox="0 0 20 20" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                   <path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z" />
                 </svg>                
-                <span class="ml-3 flex-1 whitespace-nowrap">已加星號</span>
+                <span class="ml-3 flex-1 whitespace-nowrap"><%= "#{t("star")}" %></span>
               </a>
             </li>
             <li>
@@ -79,7 +81,7 @@
                 <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 text-gray-500 flex-shrink-0 group-hover:text-gray-900 transition duration-75" viewBox="0 0 20 20" fill="currentColor">
                   <path d="M10.894 2.553a1 1 0 00-1.788 0l-7 14a1 1 0 001.169 1.409l5-1.429A1 1 0 009 15.571V11a1 1 0 112 0v4.571a1 1 0 00.725.962l5 1.428a1 1 0 001.17-1.408l-7-14z" />
                 </svg>
-                <span class="ml-3 flex-1 whitespace-nowrap">寄件備份</span>
+                <span class="ml-3 flex-1 whitespace-nowrap"><%= "#{t("sent")}" %></span>
               </a>
             </li>
             <li>
@@ -87,7 +89,7 @@
                 <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 text-gray-500 flex-shrink-0 group-hover:text-gray-900 transition duration-75" viewBox="0 0 20 20" fill="currentColor">
                   <path fill-rule="evenodd" d="M17.707 9.293a1 1 0 010 1.414l-7 7a1 1 0 01-1.414 0l-7-7A.997.997 0 012 10V5a3 3 0 013-3h5c.256 0 .512.098.707.293l7 7zM5 6a1 1 0 100-2 1 1 0 000 2z" clip-rule="evenodd" />
                 </svg>
-                <span class="ml-3 flex-1 whitespace-nowrap">標籤</span>
+                <span class="ml-3 flex-1 whitespace-nowrap"><%= "#{t("label")}" %></span>
               </a>
             </li>
             <li>
@@ -95,7 +97,7 @@
                 <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 text-gray-500 flex-shrink-0 group-hover:text-gray-900 transition duration-75" viewBox="0 0 20 20" fill="currentColor">
                   <path fillRule="evenodd" d="M9 2a1 1 0 00-.894.553L7.382 4H4a1 1 0 000 2v10a2 2 0 002 2h8a2 2 0 002-2V6a1 1 0 100-2h-3.382l-.724-1.447A1 1 0 0011 2H9zM7 8a1 1 0 012 0v6a1 1 0 11-2 0V8zm5-1a1 1 0 00-1 1v6a1 1 0 102 0V8a1 1 0 00-1-1z" clipRule="evenodd" />
                 </svg>
-                <span class="ml-3 flex-1 whitespace-nowrap">垃圾桶</span>
+                <span class="ml-3 flex-1 whitespace-nowrap"><%= "#{t("trash")}" %></span>
               </a>
             </li>
           </ul>
@@ -104,14 +106,14 @@
               <svg class="w-5 h-5 text-gray-500 flex-shrink-0 group-hover:text-gray-900 transition duration-75" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="gem" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
                 <path fill="currentColor" d="M378.7 32H133.3L256 182.7L378.7 32zM512 192l-107.4-141.3L289.6 192H512zM107.4 50.67L0 192h222.4L107.4 50.67zM244.3 474.9C247.3 478.2 251.6 480 256 480s8.653-1.828 11.67-5.062L510.6 224H1.365L244.3 474.9z"></path>
               </svg>
-              <span class="ml-4">5XRUBY</span>
+              <span class="ml-4"><%= "#{t("5xruby")}" %></span>
             </a>
             <a href="#" target="_blank" class="text-base text-gray-900 font-normal rounded-lg hover:bg-gray-100 group transition duration-75 flex items-center p-2">
               <svg class="w-6 h-6 text-gray-500 flex-shrink-0 group-hover:text-gray-900 transition duration-75" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                 <path d="M9 2a1 1 0 000 2h2a1 1 0 100-2H9z"></path>
                 <path fill-rule="evenodd" d="M4 5a2 2 0 012-2 3 3 0 003 3h2a3 3 0 003-3 2 2 0 012 2v11a2 2 0 01-2 2H6a2 2 0 01-2-2V5zm3 4a1 1 0 000 2h.01a1 1 0 100-2H7zm3 0a1 1 0 000 2h3a1 1 0 100-2h-3zm-3 4a1 1 0 100 2h.01a1 1 0 100-2H7zm3 0a1 1 0 100 2h3a1 1 0 100-2h-3z" clip-rule="evenodd"></path>
               </svg>
-              <span class="ml-3">PAYMENT</span>
+              <span class="ml-3"><%= "#{t("payment")}" %></span>
             </a>
           </div>
         </div>
