--- a/app/views/labels/new.html.erb
+++ b/app/views/labels/new.html.erb
@@ -1,19 +1,20 @@
-<div class="container items-center px-5 py-12 lg:px-20">
-  <div class="flex flex-col w-full p-10 px-8 pt-6 mx-auto my-6 mb-4 transition duration-500 ease-in-out transform bg-white border rounded-lg lg:w-1/2 ">
-    <%= form_with(model: @label) do |form| %>
-      <div class="relative pt-4">
-        <%= form.label :請輸入新的標籤名稱：, for:"title", class:"text-base leading-7 text-blueGray-500" %>
-        <%= form.text_field :title ,type:"text", class:"w-full px-4 py-2 mt-2 mr-4 text-base text-black transition duration-500 ease-in-out transform rounded-lg bg-gray-100 focus:border-blueGray-500 focus:bg-white focus:outline-none focus:shadow-outline focus:ring-2 ring-offset-current ring-offset-2" %>
-      </div>
-      <div class="relative pt-4">
-        <%= form.label :於下方標籤底下建立巢狀標籤：, for:"group", class:"text-base leading-7 text-blueGray-500" %>
-        <%= form.select :group, options_from_collection_for_select(Label.all, :title, :title), {include_blank: true}, {class: "w-full"} %> 
-      </div>
-      <div class="relative pt-4">
-        <%= link_to "取消", labels_path, class:"block w-full bg-gray-200 mt-4 py-2 rounded-2xl text-white font-semibold mb-2 text-center" %>
-        <%= form.submit "建立", class:"block w-full bg-indigo-600 mt-4 py-2 rounded-2xl text-white font-semibold mb-2 text-center" %>
-      </div>
-    <% end %>
+<div class="w-4/12 mx-auto mt-10">
+  <div class="bg-white shadow-md border border-gray-200 rounded-lg p-4">
+    <div class="space-y-6">
+      <%= form_with(model: @label) do |form| %>
+        <div class="relative pt-4">
+          <%= form.label :請輸入新的標籤名稱：, for:"title", class:"text-base leading-7 text-blueGray-500" %>
+          <%= form.text_field :title ,type:"text", class:"w-full px-4 py-2 mt-2 mr-4 text-base text-black transition duration-500 ease-in-out transform rounded-lg bg-gray-100 focus:border-blueGray-500 focus:bg-white focus:outline-none focus:shadow-outline focus:ring-2 ring-offset-current ring-offset-2" %>
+        </div>
+        <div class="relative pt-4">
+          <%= form.label :於下方標籤底下建立巢狀標籤：, for:"group", class:"text-base leading-7 text-blueGray-500" %>
+          <%= form.select :group, options_from_collection_for_select(@labels_with_order, :title, :display), {include_blank: true}, {class: "w-full px-4 py-2 mt-2 mr-4 text-base text-black transition duration-500 ease-in-out transform rounded-lg bg-gray-100 focus:border-blueGray-500 focus:bg-white focus:outline-none focus:shadow-outline focus:ring-2 ring-offset-current ring-offset-2"} %> 
+        </div>
+        <div class="relative pt-4">
+          <%= link_to "取消", labels_path, class:"block w-full bg-gray-200 mt-4 py-2 rounded-2xl text-white font-semibold mb-2 text-center" %>
+          <%= form.submit "建立", class:"block w-full bg-indigo-600 mt-4 py-2 rounded-2xl text-white font-semibold mb-2 text-center" %>
+        </div>
+      <% end %>
+    </div>
   </div>
 </div>
-
