--- a/app/views/letters/_email-content.html.erb
+++ b/app/views/letters/_email-content.html.erb
@@ -8,12 +8,26 @@
             <label for="checkbox-all" class="sr-only">checkbox</label>
           </div>
           <div class="flex space-x-2 px-0 sm:px-2">
+            <%# 垃圾桶 %>
             <a href="#" class="text-gray-500 hover:text-gray-900 cursor-pointer p-1 hover:bg-gray-100 rounded inline-flex justify-center">
               <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M9 2a1 1 0 00-.894.553L7.382 4H4a1 1 0 000 2v10a2 2 0 002 2h8a2 2 0 002-2V6a1 1 0 100-2h-3.382l-.724-1.447A1 1 0 0011 2H9zM7 8a1 1 0 012 0v6a1 1 0 11-2 0V8zm5-1a1 1 0 00-1 1v6a1 1 0 102 0V8a1 1 0 00-1-1z" clip-rule="evenodd"></path></svg>
             </a>
-            <a href="#" class="text-gray-500 hover:text-gray-900 cursor-pointer p-1 hover:bg-gray-100 rounded inline-flex justify-center">
-              <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path d="M4 3a2 2 0 100 4h12a2 2 0 100-4H4z"></path><path fill-rule="evenodd" d="M3 8h14v7a2 2 0 01-2 2H5a2 2 0 01-2-2V8zm5 3a1 1 0 011-1h2a1 1 0 110 2H9a1 1 0 01-1-1z" clip-rule="evenodd"></path></svg>            
-            </a>
+            <%# label選單 %>
+            <div class="dropdown inline-block relative items-center mr-10">
+              <a href="#" class="text-gray-500 hover:text-gray-900 cursor-pointer p-1 hover:bg-gray-100 rounded inline-flex justify-center">
+                <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 text-gray-500 flex-shrink-0 group-hover:text-gray-900 transition duration-75" viewBox="0 0 20 20" fill="currentColor">
+                  <path fill-rule="evenodd" d="M17.707 9.293a1 1 0 010 1.414l-7 7a1 1 0 01-1.414 0l-7-7A.997.997 0 012 10V5a3 3 0 013-3h5c.256 0 .512.098.707.293l7 7zM5 6a1 1 0 100-2 1 1 0 000 2z" clip-rule="evenodd" />
+                </svg>            
+              </a>
+              <ul class="dropdown-content w-32  absolute hidden text-gray-700 pt-1">
+                <% @labels.each do |label| %> 
+                  <li class="rounded-b bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap"><%= label.hierarchy %></li>
+                <% end %>
+                <li><%= link_to '建立標籤', new_label_path, class:"rounded-b bg-gray-200 hover:bg-gray-400 py-2 px-4 block whitespace-no-wrap" %></li>
+              </ul>
+            </div>
+
+            <%# 更多選項 %>
             <a href="#" class="text-gray-500 hover:text-gray-900 cursor-pointer p-1 hover:bg-gray-100 rounded inline-flex justify-center">
               <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path d="M10 6a2 2 0 110-4 2 2 0 010 4zM10 12a2 2 0 110-4 2 2 0 010 4zM10 18a2 2 0 110-4 2 2 0 010 4z"></path></svg>
             </a>
@@ -39,12 +53,12 @@
           <div class="align-middle inline-block min-w-full">
             <div class="shadow overflow-hidden">
               <% letters.each do |letter| %> 
-                <div class="letter_container flex hover:bg-gray-100 border">
-                  <div class="flex w-10 items-center justify-center">
+                <div class="w-full letter_container flex hover:bg-gray-100 border">
+                  <div class="flex w-10 mr-2 items-center justify-center">
                     <input id="checkbox" aria-describedby="checkbox-1" type="checkbox" class=" bg-gray-50 border-gray-300 focus:ring-3 focus:ring-cyan-200 h-4 w-4 rounded" onClick="event.stopPropagation();">
                     <label for="checkbox" class="sr-only">checkbox</label>
                   </div>
-                  <div class="flex items-center justify-center"
+                  <div class="mr-2 flex items-center justify-center"
                         data-controller="starmail"
                         data-starmail-starred-value="<%= user_signed_in? && current_user %>"
                         data-starmail-letter-id-value="<%= letter.id %>">
@@ -62,24 +76,26 @@
                     <% end %>
                     </div>
                   </div>
-                  <%= link_to letter_path(letter.id) do %>
-                    <div class="flex justify-items-center">
-                      <div class="flex text-sm font-normal space-x-4 cursor-pointer align-middle">
+                  <div class="w-full">
+                    <%= link_to letter_path(letter.id) do %>
+                      <div class="w-full flex justify-items-center">
+                        <div class="w-1/6 p-4 items-center whitespace-nowrap space-x-4 text-base font-semibold text-gray-900">
+                          <%= letter.user.username %>
+                        </div>
+                        <div class="w-4/6 flex p-4 text-base text-gray-900 truncate overflow-hidden">
+                          <span class="font-bold mr-2">
+                            <%= letter.subject %>
+                          </span>
+                          <span  class="font-light">
+                            <%= letter.content %>
+                          </span>
+                        </div>
+                        <div class="ml-auto p-4 pr-10 text-base font-normal text-gray-900 max-w-sm xl:max-w-screen-md 2xl:max-w-screen-lg truncate overflow-hidden">
+                          <%= letter.created_at.strftime("%Y/%m/%d") %>
+                        </div>
                       </div>
-                      <div class="w-1/5 p-4 items-center whitespace-nowrap space-x-4 text-base font-semibold text-gray-900">
-                        <%= letter.user.username %>
-                      </div>
-                      <div class="w-52 p-4 text-base font-semibold text-gray-900 max-w-sm xl:max-w-screen-md 2xl:max-w-screen-lg truncate overflow-hidden">
-                        <%= letter.subject %>
-                      </div>
-                      <div class="w-96 p-4 text-base font-normal text-gray-900 max-w-sm xl:max-w-screen-md 2xl:max-w-screen-lg truncate overflow-hidden">
-                        <%= letter.content %>
-                      </div>
-                      <div class="ml-auto p-4 text-base font-normal text-gray-900 max-w-sm xl:max-w-screen-md 2xl:max-w-screen-lg truncate overflow-hidden">
-                        <%= letter.created_at.strftime("%Y/%m/%d") %>
-                      </div>
-                    </div>
-                  <% end %>
+                    <% end %>
+                  </div>
                 </div>
               <% end %> 
             </div>
